# pineapple-pen

./: Justfile  README.md  pyproject.toml
.github/workflows/: CI.yml
assets/: strings.toml
assets/includes/: battle_tools.md  judge.md
src/genio/: battle.py  battle_commands.py  battle_harness.py  card.py  card_rewards.py  effect.py  gamestate.py  gui.py  scene.py  scene_booster.py  scene_card_reward.py  stagegen.py
src/genio/core/: base.py  llm.py  toolloop.py
src/genio/gears/: card_printer.py
src/genio/utils/: robustyaml.py
tests/: test_battle.py  test_battle_commands.py  test_battle_harness.py  test_card_rewards.py  test_effect.py  test_gui_choice_overlay.py  test_status_hooks.py  test_toolloop.py  toolloop_fakes.py
tests/integration/: test_effect_apply.py
